# MemoryOS-Private-Server-AP-Expert

./: .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  Dockerfile  README.md  REMOTE_MCP_DEPLOYMENT.md  SECURITY.md  USER_MANAGEMENT.md  api_key_manager.py  benchmark_speed.py  config.json  config.simple.json  config.template.json  create_api_key.py  debug_memoryos_init.py  demo_server_ready.py  deploy_server.py  deploy_server_fixed.py  docker-compose.yml  generate_api_key.py  main.py  mcp_remote_server.py  mcp_server.py  mcp_server_old.py  pyproject.toml  remote_mcp_config.json  replit.md  requirements.txt  run.py  setup_api_key.py  simple_memory_test.py  simple_test.py  simple_test_server.py  simple_working_test.py  test_api_key.py  test_client_auth_fix.py  test_complete_memory_tiers.py  test_deployment.py  test_embedding_issue.py  (+17 more)
attached_assets/: Pasted--Production-MCP-Client-for-MemoryOS-Server-Connects-to-MemoryOS-using-MCP-JSON-RPC-2-0-protocol-w-1751967387660_1751967387661.txt  Pasted--usr-bin-env-python3-Test-User-Conversation-Memory-Comprehensive-test-of-Memory-MCP-client-to--1751976384980_1751976384981.txt  Pasted-Perfect-Now-I-have-the-correct-configuration-The-memory-functionality-uses-the-same-API-key-but-sp-1751965643838_1751965643839.txt
memoryos/: __init__.py  execution_memory.py  long_term.py  memoryos.py  mid_term.py  prompts.py  retriever.py  schema_loader.py  short_term.py  updater.py  utils.py
schemas/: add_conversation_input.json  add_execution_output.json  retrieve_conversation_input.json  retrieve_conversation_output.json  (+1 more)
(+5 files in other folders)
